--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,10 @@ jobs:
         go-version: 1.20
     
     - name: Build
-      run: go build -v -o TravelleRBackend ./...
+      run: |
+        go mod tidy
+        go mod download
+        go build -v -o TravelleRBackend ./...
     
     - name: Deploy
       run: |
